--- a/Iniciar_sesion.html
+++ b/Iniciar_sesion.html
@@ -26,7 +26,7 @@
                 <input type="password" id="password" name="password" placeholder="Contraseña" required>
                 <input type="submit" value="Iniciar Sesión">
                 <button type="button" class="btn btn-primary"
-                    onclick="window.location.href = 'Principal.php';">Cancelar</button>
+                    onclick="window.location.href = 'index.php';">Cancelar</button>
             </form>
         </div>
     </section>
